# adrscope

./: .gitignore  ACTION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  action.yml  clippy.toml  deny.toml  problem-matcher.json
.github/actions/adrscope/: README.md  problem-matcher.json
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: configuration.md  getting-started.md  user-guide.md
docs/decisions/: README.md  adr-0001-use-structured-madr-format.md  adr-0002-clean-architecture-layers.md  adr-0003-trait-based-filesystem-abstraction.md  adr-0004-forbid-unsafe-code-and-panics.md  adr-0005-unified-error-types-with-thiserror.md  adr-0006-cargo-deny-supply-chain-security.md  adr-0007-askama-compile-time-templates.md  adr-0008-extensible-validation-rule-pattern.md
docs/spec/active/: adrscope-spec_1.md
src/: error.rs  lib.rs  main.rs
src/application/: generate.rs  mod.rs  stats.rs  validate.rs  wiki.rs
src/cli/: args.rs  handlers.rs  mod.rs
src/domain/: adr.rs  facets.rs  frontmatter.rs  graph.rs  mod.rs  stats.rs  status.rs  validation.rs
src/infrastructure/: fs.rs  mod.rs
src/infrastructure/parser/: frontmatter.rs  markdown.rs  mod.rs
src/infrastructure/renderer/: html.rs  mod.rs  wiki.rs
templates/: app.js  styles.css  viewer.html
tests/: integration_test.rs
